--- a/nav bar/index.html
+++ b/nav bar/index.html
@@ -7,19 +7,88 @@
     <link rel="stylesheet" href="nav.css" />
   </head>
   <body>
-
-
-    <div class="card">
-      <img src="image.png" class="card-img 1" alt="" />
-      <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+     <button class="newsletter-btn">join newsletter</button>
+    <div class="container">
+      <div class="header">
+        <h1>A Beautifully Decorated Dream Room ✨</h1>
+      </div>
+<img src="sofaa.png" class="card-img" alt="" />
+      <p>
+        A good decorative room feels warm, elegant, and peaceful the moment you
+        step inside. Soft golden lights glow gently from stylish lamps placed at
+        the corners, creating a calm and cozy atmosphere. The walls are painted
+        in soothing pastel shades, decorated with aesthetic paintings and framed
+        memories that add personality to the space. A comfortable sofa with
+        colorful cushions sits gracefully on a soft, patterned carpet, inviting
+        you to relax. Indoor plants placed near the window bring freshness and
+        life, while light curtains flow smoothly with the breeze.<br><br> A neatly
+        arranged bookshelf and a small decorative table with scented candles
+        complete the room’s charm. Every element is thoughtfully placed, making
+        the room not just beautiful to look at, but also a perfect space to feel
+        peace, comfort, and happiness. more A beautifully decorated room feels
+        like a perfect blend of comfort, creativity, and calmness. 
+        <br><br><br><br> Near the window, sheer curtains allow natural sunlight to
+        filter in gently, filling the room with brightness and warmth. Indoor
+        plants in modern pots bring a refreshing touch of nature, making the
+        atmosphere lively and fresh. A wooden coffee table with neatly arranged
+        books, a small flower vase, and scented candles adds charm and
+        personality. Wall-mounted shelves display decorative pieces, framed
+        photographs, or artistic sculptures that reflect individual taste and
+        creativity. A study corner with a minimal desk, organized stationery,
+        and a comfortable chair completes the setting, making the room both
+        functional and aesthetically pleasing. <br><br>Overall, the room feels peaceful
+        yet vibrant, stylish yet comfortable — a perfect place to relax, think,
+        create, and enjoy beautiful moments. haeding too
+      </p>
+      <div class="footer">
+        <p background>all images are copy right </p>
+      </div>
     </div>
-    <div class="card">
-      <img src="CHANDRIKA Y IMG.jpg" class="card-img 2" alt="" />
-      <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+    <div class="container">
+      <div class="header">
+        <h1>the kajal aggarwal life time hits ✨</h1>
+      </div>
+<img src="kajal.jpg" class="card-img" alt="" />
+      <p>
+        A good decorative room feels warm, elegant, and peaceful the moment you
+        step inside. Soft golden lights glow gently from stylish lamps placed at
+        the corners, creating a calm and cozy atmosphere. The walls are painted
+        in soothing pastel shades, decorated with aesthetic paintings and framed
+        memories that add personality to the space. A comfortable sofa with
+        colorful cushions sits gracefully on a soft, patterned carpet, inviting
+        you to relax. Indoor plants placed near the window bring freshness and
+        life, while light curtains flow smoothly with the breeze.<br><br> A neatly
+        arranged bookshelf and a small decorative table with scented candles
+        complete the room’s charm. Every element is thoughtfully placed, making
+        the room not just beautiful to look at, but also a perfect space to feel
+        peace, comfort, and happiness. more A beautifully decorated room feels
+        like a perfect blend of comfort, creativity, and calmness. 
+        <br><br><br><br> Near the window, sheer curtains allow natural sunlight to
+        filter in gently, filling the room with brightness and warmth. Indoor
+        plants in modern pots bring a refreshing touch of nature, making the
+        atmosphere lively and fresh. A wooden coffee table with neatly arranged
+        books, a small flower vase, and scented candles adds charm and
+        personality. Wall-mounted shelves display decorative pieces, framed
+        photographs, or artistic sculptures that reflect individual taste and
+        creativity. A study corner with a minimal desk, organized stationery,
+        and a comfortable chair completes the setting, making the room both
+        functional and aesthetically pleasing. <br><br>Overall, the room feels peaceful
+        yet vibrant, stylish yet comfortable — a perfect place to relax, think,
+        create, and enjoy beautiful moments. haeding too
+      </p>
+      <div class="footer">
+        <p background>all images are copy right </p>
+      </div> 
+    <div class="bg">
+    <img src="image.png"  class="img-fluid"alt="" height="400px" width="200%">
+    <div class="tint"></div>
+    <div class="content">
+      <h1>the life spells it over </h1>
+      <p>Lorem  corporis quibusdam quisquam repellat est, deleniti odio fugiat asperiores delectus beatae ab laboriosam numquam iusto ipsum eum explicabo iste ducimus.Possimus reprehenderit obcaecati dolores recusandae quos inventore quae ipsum nulla laudantium repellat, aperiam mollitia est incidunt pariatur iusto cupiditate.</p>
+    <button class="btn-light">explore now</button>
     </div>
-    <div class="card">
-      <img src="kajal.jpg" class="card-img3" alt="" />
-      <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-    </div> 
+    </div>
+    
+
   </body>
 </html>
